--- a/package.json
+++ b/package.json
@@ -5,19 +5,26 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "json:server": "json-server --watch db.json"
+    "json:server": "json-server --watch db.json",
+    "start": "ts-node server.ts",
+    "dev": "nodemon",
+    "all": "concurrently --kill-others \"yarn run dev\" \"yarn run json:server\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.16.1",
     "@types/express-graphql": "^0.8.0",
     "@types/lodash": "^4.14.126",
+    "axios": "^0.18.0",
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.0",
     "json-server": "^0.14.2",
     "lodash": "^4.17.11",
+    "nodemon": "^1.19.0",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   }
